# quantum-rag

./: .gitignore  ERCOT_NOTES.md  ERCOT_SAMPLES.md  JIRA.md  LANGCHAIN_INTEGRATION.md  NOTES.md  PROPOSAL.md  READINGs.md  README.md  README_NEW.md  TESTING_STRATEGY.md  api_logs.txt  app.py  kill.sh  nohup.out  pyproject.toml  random_num.ipynb  requirements-frozen.txt  requirements.txt  startup.sh  test.ipynb
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/agent/: __init__.py  router_agent.py
app/embeddings/: __init__.py  embeddings.py
app/generator/: __init__.py  llm_generator.py
app/integrations/: __init__.py  langchain_pipeline.py
app/reranker/: classical.py  quantum.py
app/schema/: models.py
app/vector_store/: __init__.py  store.py
examples/: README.md  ercot_api_example.py
infra/: main.tf  rds.tf  variables.tf
ingestion/: __init__.py  pipeline.py
ingestion/ercot/: __init__.py  fetch_api.py  parse_reports.py  schedule.py
mcp/: README.md  piers_morgan_faiss_index.faiss  piers_morgan_faiss_index_metadata.pkl
mcp/client/: main.py
mcp/server/: server.py
scripts/: check_dependencies.py  langchain_example.py  start_with_langchain.sh
src/agents/: intent_agent_atomic.py
src/api/: dual_storage_api.py  ebay_inventory.py  embedding_api.py  energy_forecast.py  energy_query_api.py  pgvector_query_api.py  watchrecon_api.py
src/config/: ebay_config.py  intent_config.py
src/embeddings/: embed_utils.py
src/prompts/: __init__.py  builders.py  comparative_analysis.py  direct_query.py  energy_efficiency.py  (+6 more)
ui/: README.md  app.py
(+37 files in other folders)
