[project]
name = "quantum-work"
version = "0.1.0"
description = ""
authors = [
    {name = "jon fox",email = "jon@foxsolutions.dev"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.97.0,<2.0.0)",
    "atomic-agents (>=1.1.11,<2.0.0)",
    "fastmcp (>=2.10.5,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "qiskit (>=2.1.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "starlette (>=0.47.2,<0.48.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"